# video-encoder

./: CMakeLists.txt  main.py  readme.md  setup.py
video-encoder/cpp/: main.cpp
